--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1273,6 +1273,7 @@ The final few sections each document a different separate helper package.
 % We load the RDA colour palette as defined in section~\ref{sec:rdacolors}.
 %
 %    \begin{macrocode}
+
 \RequirePackage{rdacolors}
 %    \end{macrocode}
 %
@@ -1499,10 +1500,15 @@ The final few sections each document a different separate helper package.
 %
 % \subsection{Theme: Presentation outer theme}
 %
+% The outer theme means things like the background, head, foot, and frame title.
+%
+% \subsubsection{Utility settings}
+%
 % We introduce a toggle, |titlepage|, that can be used to provide a
 % different layout depending on whether this is a normal or a title slide.
 %
 %    \begin{macrocode}
+
 \newtoggle{titlepage}
 %    \end{macrocode}
 %
@@ -1601,6 +1607,8 @@ The final few sections each document a different separate helper package.
 % \end{optionkey}
 % \end{macro}
 %
+% \subsubsection{Background imagery template}
+%
 % We stretch the aspect ratio of the background to fill the slide. The
 % \texttt{rda-bg-wmark} image is handled specially, as it is a full-saturation
 % tiling pattern: it is first scaled to the page height, then (if necessary)
@@ -1696,6 +1704,9 @@ The final few sections each document a different separate helper package.
 \preto\beamer@reseteecodes{\setkeys{beamerframe}{nobackground}\togglefalse{titlepage}}
 %    \end{macrocode}
 %
+% \subsubsection{Headline (RDA group information) template}
+% \label{sec:headline}
+%
 % Normal slides do not have a headline, but we can use the \texttt{headline} template to
 % add (optionally) details of the RDA group to the title slides. In the
 % \bthm{RDA2016} theme, we also need to use it to add the big RDA logo since we
@@ -1776,6 +1787,7 @@ The final few sections each document a different separate helper package.
 % but the design here has to cope with the RDA logo being absent on the title
 % slide and present on the finale slide (0.0725\cs{paperwidth} wide, inset
 % 0.03\cs{paperwidth} from the right edge and 3.5mm from the top edge).
+% The top left is already busy on the finale slide so we avoid it.
 %
 %    \begin{macrocode}
 \defbeamertemplate*{headline}{RDA headline}{%
@@ -1849,26 +1861,22 @@ The final few sections each document a different separate helper package.
 }
 %    \end{macrocode}
 %
-% This is our new version of the \texttt{frametitle} template for the \bthm{RDA} theme.
+% \subsubsection{Frame title template}
+%
+% None of the title page designs are amenable to the inclusion of a frame title,
+% so we routinely ignore frame titles while the \texttt{titlepage} toggle is
+% true.
+%
+% In the \bthm{RDA} theme, the frame title block in the default background image
+% curves down in the middle, so we need to tell \pkg{beamer} to make its
+% \texttt{frametitle} template a little deeper to cover it. The following code
+% mimics the default, but adds a \key{dp} option to the \env{beamercolorbox}
+% environment.
 %
 %    \begin{macrocode}
 \defbeamertemplate*{frametitle}{RDA theme}{%
   \ifbeamercolorempty[bg]{frametitle}{}{\nointerlineskip}%
-%    \end{macrocode}
-%
-% The title page background image does not lend itself to a frame title,
-% so just in case the user provides one, we deliberately ignore it.
-%
-%    \begin{macrocode}
   \iftoggle{titlepage}{}{%
-%    \end{macrocode}
-%
-% The frame title block in the default background image curves down in the
-% middle, so we need to tell \pkg{beamer} to make its \texttt{frametitle} template a little
-% deeper to cover it. The following code mimics the default, but adds a \key{dp}
-% option to the \env{beamercolorbox} environment.
-%
-%    \begin{macrocode}
     \@tempdima=\textwidth%
     \advance\@tempdima by\beamer@leftmargin%
     \advance\@tempdima by\beamer@rightmargin%
@@ -1888,7 +1896,6 @@ The final few sections each document a different separate helper package.
     \end{beamercolorbox}%
   }%
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -1897,26 +1904,18 @@ The final few sections each document a different separate helper package.
 % \fi
 %
 % Here is the corresponding version for the \bthm{RDA2016} theme.
+% The title block begins with the RDA logo flush to the slide edge.
 %
 %    \begin{macrocode}
 \defbeamertemplate*{frametitle}{RDA theme}{%
   \ifbeamercolorempty[bg]{frametitle}{}{\nointerlineskip}%
-%    \end{macrocode}
-%
-% As before, we deliberately ignore any title given on a title page.
-%
-%    \begin{macrocode}
   \iftoggle{titlepage}{}{%
-%    \end{macrocode}
-%
-% On the other slides, the title block begins with the RDA logo flush to the slide edge.
-%
-%    \begin{macrocode}
     \begin{beamercolorbox}[sep=0pt,wd=\paperwidth]{frametitle}
       \usebeamerfont{frametitle}%
       \hangindent=17.5mm
       \hangafter=1
-      \raisebox{-0.2\height}[7.3mm][0pt]{\includegraphics[width=14.5mm]{rda-logo}}\hspace{3mm}%
+      \adjustimage{width=14.5mm,raise={-0.2\height}{7.3mm}{0pt}}{rda-logo}%
+      \hspace{3mm}%
       \insertframetitle\par%
       {%
         \ifdefvoid{\insertframesubtitle}{}{%
@@ -1928,7 +1927,6 @@ The final few sections each document a different separate helper package.
     \end{beamercolorbox}%
   }%
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -1936,16 +1934,13 @@ The final few sections each document a different separate helper package.
 %<*theme3>
 % \fi
 %
-% Here is the corresponding version for the \bthm{RDA2020} theme.
+% In the \bthm{RDA2020} theme, the template is similar in intent to the one in
+% \bthm{RDA2016} theme, but the logo is in the background, bigger and lower,
+% so the frame title block is vertically centred next to where it should be.
 %
 %    \begin{macrocode}
 \defbeamertemplate*{frametitle}{RDA theme}{%
   \ifbeamercolorempty[bg]{frametitle}{}{\nointerlineskip}%
-%    \end{macrocode}
-%
-% On the other slides, the title block begins with the RDA logo flush to the slide edge.
-%
-%    \begin{macrocode}
   \iftoggle{titlepage}{}{%
     \begin{beamercolorbox}[sep=0pt,wd=\paperwidth]{frametitle}
       \usebeamerfont{frametitle}%
@@ -1966,7 +1961,6 @@ The final few sections each document a different separate helper package.
     \end{beamercolorbox}%
   }%
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -1974,22 +1968,15 @@ The final few sections each document a different separate helper package.
 %<*theme4>
 % \fi
 %
-% Here is the corresponding version for the \bthm{RDA2024} theme.
+% In the \bthm{RDA2024} theme, the logo is similar in size to the one in the
+% \bthm{RDA2016} theme, but further inset, and with the option of being on
+% either the left or right. For consistency across designs, we opt for centre
+% alignment.
 %
 %    \begin{macrocode}
 \defbeamertemplate*{frametitle}{RDA theme}{%
   \ifbeamercolorempty[bg]{frametitle}{}{\nointerlineskip}%
-%    \end{macrocode}
-%
-% As before, we deliberately ignore any title given on a title page.
-%
-%    \begin{macrocode}
   \iftoggle{titlepage}{}{%
-%    \end{macrocode}
-%
-% On the other slides, the title block begins with the RDA logo flush to the slide edge.
-%
-%    \begin{macrocode}
     \begin{adjustbox}{minipage=[c][13mm]{0.73\paperwidth},center}%
       \begin{beamercolorbox}[sep=0pt,center]{frametitle}
         \linespread{0.75}\selectfont\insertframetitle\par%
@@ -2004,13 +1991,23 @@ The final few sections each document a different separate helper package.
     \end{adjustbox}%
   }%
 }
-
 %    \end{macrocode}
 %
 % \iffalse
 %</theme4>
 %<*theme|theme2|theme3|theme4>
 % \fi
+%
+% By default \pkg{beamer} uses Roman numerals for split frames.
+% Across all themes, we change this to Arabic numerals.
+%
+%    \begin{macrocode}
+\setbeamertemplate{frametitle continuation}{%
+  (\insertcontinuationcount)%
+}
+%    \end{macrocode}
+%
+% \subsubsection{Progress indicators}
 %
 % We provide a variety of progress indicators.
 %
@@ -2072,19 +2069,19 @@ The final few sections each document a different separate helper package.
 }
 %    \end{macrocode}
 %
-% The \pkg{beamer} footline template lays out elements along the bottom of the screen.
+% \subsubsection{Footline template}
+%
+% The \pkg{beamer} \texttt{footline} template lays out elements along the bottom
+% of the screen.
 %
 % \iffalse
 %</theme|theme2|theme3|theme4>
 %<*theme>
 % \fi
 %
-% In the \bthm{RDA} theme, we set the height of the footline to 8mm so it fits over
-% the RDA logo in the standard background image.
-%
-%    \begin{macrocode}
-\setbeamertemplate{footline}{%
-%    \end{macrocode}
+% In the \bthm{RDA} theme, we set the height of the footline to 8mm (6mm with
+% 1mm padding top and bottom) so it fits over the RDA logo in the standard
+% background image.
 %
 % We use a typical layout: a left-aligned box at the left, a centre-aligned box
 % in the middle and a right-aligned box at the right. The left hand box is
@@ -2092,6 +2089,7 @@ The final few sections each document a different separate helper package.
 % it on the title slide, for the \pkg{beamer} title graphic.
 %
 %    \begin{macrocode}
+\setbeamertemplate{footline}{%
   \hypersetup{urlcolor=fg}%
   \adjustbox{minipage=[b][6mm][t]{\dimexpr0.3\paperwidth-3mm\relax},margin=3mm 1mm,left=0pt}{%
     \iftoggle{titlepage}{%
@@ -2114,6 +2112,9 @@ The final few sections each document a different separate helper package.
 %    \end{macrocode}
 %
 % On the title slide, we use the right hand box for the licence image.
+% In the standard background image the right hand box is occupied by the RDA
+% logo, but since it is shorter than the strapline on the left, we can balance
+% it with a progress indicator.
 %
 %    \begin{macrocode}
   \adjustbox{minipage=[b][6mm][t]{\dimexpr0.3\paperwidth-3mm\relax},margin=3mm 1mm,right=0pt}{%
@@ -2124,19 +2125,11 @@ The final few sections each document a different separate helper package.
           \ifdefvoid{\licenseUrl}{\licenseLogo}{\href{\licenseUrl}{\licenseLogo}}%
         }%
       }%
-%    \end{macrocode}
-%
-% In the standard background image the right hand box is occupied by the RDA
-% logo, but since it is shorter than the strapline on the left, we can balance
-% it with a progress indicator.
-%
-%    \begin{macrocode}
     }{%
       \strut\usebeamertemplate*{progress}
     }%
   }%
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -2192,8 +2185,9 @@ The final few sections each document a different separate helper package.
 }
 %    \end{macrocode}
 %
-% Note that, as compared to the \bthm{RDA} theme, this template does not display
-% the title graphic or licence logo, so we will have to fix that later.
+% Note that, unlike the \bthm{RDA} theme, this template does not display
+% the title graphic or licence logo, so we will have to fix that later
+% (see \ref{sec:titlepage}).
 %
 % \iffalse
 %</theme2>
@@ -2201,7 +2195,7 @@ The final few sections each document a different separate helper package.
 % \fi
 %
 % In the \bthm{RDA2020} theme, the footline is the same on all slides, and
-% consists of a brown strip various metadata spaced out.
+% consists of a brown strip with various metadata spaced out.
 %
 %    \begin{macrocode}
 \setbeamertemplate{footline}{%
@@ -2245,7 +2239,7 @@ The final few sections each document a different separate helper package.
     \hspace*{\stretch{2}}%
 %    \end{macrocode}
 %
-% We use the right hand box for the progress indicator.
+% Last, we put the progress indicator and licence logo.
 %
 %    \begin{macrocode}
     \usebeamertemplate*{progress}%
@@ -2256,11 +2250,10 @@ The final few sections each document a different separate helper package.
     \hspace*{0.333em}\par
   \end{beamercolorbox}
 }
-
 %    \end{macrocode}
 %
-% Note that, as compared to the \bthm{RDA} theme, this template does not display
-% the title graphic or licence logo, so we will have to fix that later.
+% Again, this template does not display the title graphic,
+% so we will have to fix that later (see \ref{sec:titlepage}).
 %
 % \iffalse
 %</theme3>
@@ -2268,16 +2261,21 @@ The final few sections each document a different separate helper package.
 % \fi
 %
 % In the \bthm{RDA2024} theme, we set the footline to cover the footer block in
-% the background image.
+% the background images. It is already quite busy in most of them, so we are
+% working with a sprung box covering the stripe on left-biased images,
+% a sprung box covering the stripe on right-biased images, and a
+% centre-aligned box covering the remaining space in the middle.
 %
 %    \begin{macrocode}
 \setbeamertemplate{footline}{%
 %    \end{macrocode}
 %
-% We use a typical layout: a left-aligned box at the left, a centre-aligned box
-% in the middle and a right-aligned box at the right. The left hand box is
-% occupied by the RDA strapline in the standard background image, so we only use
-% it on the title slide, for the \pkg{beamer} title graphic.
+% \begin{macro}{footLThook}
+% \begin{macro}{footLHShook}
+% We only use the left-hand box on the title slide (where it is fairly clear),
+% for the \pkg{beamer} title graphic at the left end. In case authors need it,
+% we have hooks for inserting content at the right end, \cs{footLThook} for
+% title slides and \cs{footLHShook} on regular slides.
 %
 %    \begin{macrocode}
   \hypersetup{urlcolor=fg}%
@@ -2298,12 +2296,16 @@ The final few sections each document a different separate helper package.
   \end{adjustbox}%
   \hfill
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 %
+% \begin{macro}{footCThook}
 % We use the centre box (on non-title slides) for the progress meter and the
-% hashtag, if given.
+% hashtag, if given. We provide a hook, \cs{footCThook}, for inserting content
+% there on title slides (but this will clash if \cs{finale} is used).
 %
 %    \begin{macrocode}
-\begin{adjustbox}%
+  \begin{adjustbox}%
   {minipage=[t][8.4mm][t]{0.3\paperwidth}
   }\centering
     \iftoggle{titlepage}{%
@@ -2315,8 +2317,13 @@ The final few sections each document a different separate helper package.
   \end{adjustbox}%
   \hfill
 %    \end{macrocode}
+% \end{macro}
 %
-% On the title slide, we use the right hand box for the licence image.
+% \begin{macro}{footLThook}
+% \begin{macro}{footLHShook}
+% We only use the right hand box ib the title slide, for the licence image at
+% the right end. Again, there are hooks for inserting content at the left end,
+% \cs{footRThook} for title slides and \cs{footRHShook} on regular slides.
 %
 %    \begin{macrocode}
   \begin{adjustbox}%
@@ -2340,38 +2347,27 @@ The final few sections each document a different separate helper package.
   \end{adjustbox}%
 }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 %
 % \iffalse
 %</theme4>
 %<*theme|theme2|theme3|theme4>
 % \fi
 %
-% By default we remove the tell-tale and seldom used \pkg{beamer} navigation symbols.
+% Across all themes, we default to omitting the tell-tale but seldom used
+% \pkg{beamer} navigation symbols.
 %
 %    \begin{macrocode}
-
 \setbeamertemplate{navigation symbols}{}
-
-%    \end{macrocode}
-%
-% By default \pkg{beamer} uses Roman numerals for split frames. We change this to
-% Arabic numerals.
-%
-%    \begin{macrocode}
-\setbeamertemplate{frametitle continuation}{%
-  (\insertcontinuationcount)%
-}
 
 %    \end{macrocode}
 %
 % \subsection{Theme: Presentation inner theme}\label{sec:inner}
 %
-% Since space is tight on the title slide, we change the default presentation
-% of multiple institutions so they can share a line.
+% Here we style lists and the \cs{maketitle} command.
 %
-%    \begin{macrocode}
-\mode<presentation>{\def\beamer@andinst{\quad}}
-%    \end{macrocode}
+% \subsubsection{Lists}
 %
 % \iffalse
 %</theme|theme2|theme3|theme4>
@@ -2388,8 +2384,8 @@ The final few sections each document a different separate helper package.
 %</theme>
 %<*theme2|theme4>
 % \fi
-% In the \bthm{RDA2016} theme, itemized lists use chevrons at the top level,
-% en dashes at the second, and circles at the third.
+% In the \bthm{RDA2016} and \bthm{RDA2024} themes, itemized lists use chevrons
+% at the top level, en dashes at the second, and circles at the third.
 %
 %    \begin{macrocode}
 \AtEndPreamble{\RequirePackage{fontawesome}}
@@ -2415,12 +2411,28 @@ The final few sections each document a different separate helper package.
 %
 % \iffalse
 %</theme3>
+%<*theme|theme2|theme3|theme4>
+% \fi
+%
+% \subsubsection{Title page template}
+% \label{sec:titlepage}
+%
+% Since space is tight on most iterations of the title slide, we change the
+% default presentation of multiple institutions so they can share a line.
+%
+%    \begin{macrocode}
+\mode<presentation>{\def\beamer@andinst{\quad}}
+%    \end{macrocode}
+%
+% \iffalse
+%</theme|theme2|theme3|theme4>
 %<*theme>
 % \fi
 %
 % The \pkg{beamer} title page template lays out the elements of the title page.
-% We need a different one for each theme. For the \bthm{RDA} theme, we begin by
-% setting the special background image.
+% We need a different one for each theme.
+%
+% For the \bthm{RDA} theme, we begin by setting the special background image.
 %
 %    \begin{macrocode}
 \setbeamertemplate{title page}{%
@@ -2429,9 +2441,7 @@ The final few sections each document a different separate helper package.
 %    \end{macrocode}
 %
 % The background image is in thirds, with the majority of the titling content
-% expected to go in the middle third. Even though the title page has a headline
-% occupying the top third, this does not affect the layout of the slide since
-% \pkg{beamer} does not calculate it afresh each time. So we block out the top
+% expected to go in the middle third. So we start by blocking out the top
 % third (about 24\,mm) with a \cs{vbox}.
 %
 %    \begin{macrocode}
@@ -2479,7 +2489,6 @@ The final few sections each document a different separate helper package.
   \end{minipage}
   \vspace*{2mm}
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -2487,9 +2496,9 @@ The final few sections each document a different separate helper package.
 %<*theme2>
 % \fi
 %
-% There is more freedom available with the \bthm{RDA2016} theme. Again, the
-% layout doesn't know about the logo inserted by the headline template on
-% title pages, so we reserve some space for it.
+% There is more freedom available with the \bthm{RDA2016} theme. Again, we start
+% by reserving space for the logo inserted by the \texttt{headline} template
+% (see \ref{sec:headline}).
 %
 %    \begin{macrocode}
 \setbeamertemplate{title page}{%
@@ -2541,7 +2550,6 @@ The final few sections each document a different separate helper package.
     }%
   }}%
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -2549,7 +2557,7 @@ The final few sections each document a different separate helper package.
 %<*theme3>
 % \fi
 %
-% The \bthm{RDA2020} theme has the same small logo as all other
+% The \bthm{RDA2020} theme has the same small logo at the top left as all other
 % slides, so we reflect this in the layout.
 %
 %    \begin{macrocode}
@@ -2559,7 +2567,7 @@ The final few sections each document a different separate helper package.
 %    \end{macrocode}
 %
 % We then provide the metadata elements, with stretchy skips top and bottom to
-% centre them on the page.
+% centre them on the page, but fixed skips inbetween.
 %
 %    \begin{macrocode}
   \vfill
@@ -2588,8 +2596,6 @@ The final few sections each document a different separate helper package.
 %    \end{macrocode}
 %
 % Finally, we provide an extra zero-height line for the title graphic.
-% Unlike the other templates, the licence logo is in the footline
-% rather than here.
 %
 %    \begin{macrocode}
   \raisebox{0pt}[0pt][0pt]{\makebox[\linewidth]{%
@@ -2605,9 +2611,10 @@ The final few sections each document a different separate helper package.
 %<*theme4>
 % \fi
 %
-% The \pkg{beamer} title page template lays out the elements of the title page.
-% We need a different one for each theme. For the \bthm{RDA} theme, we begin by
-% setting the special background image.
+% The \bthm{RDA2024} theme's title slide has several bold elements to work
+% around. In the top half, the middle third is the logo, and we've used the
+% right hand side in the \texttt{headline} for RDA group information, so the
+% left hand side is availble for the occasion and date.
 %
 %    \begin{macrocode}
 \setbeamertemplate{title page}{%
@@ -2617,15 +2624,6 @@ The final few sections each document a different separate helper package.
   \parfillskip \z@skip%
   \global\toggletrue{titlepage}%
   \setkeys{beamerframe}{background=rda24-title}%
-%    \end{macrocode}
-%
-% The background image is in thirds, with the majority of the titling content
-% expected to go in the middle third. Even though the title page has a headline
-% occupying the top third, this does not affect the layout of the slide since
-% \pkg{beamer} does not calculate it afresh each time. So we block out the top
-% third (about 35\,mm) with a \cs{vbox}.
-%
-%    \begin{macrocode}
   \begin{adjustbox}%
   {minipage=[c][26mm]{\dimexpr0.292\paperwidth\relax}
   ,valign=T
@@ -2641,9 +2639,9 @@ The final few sections each document a different separate helper package.
   \end{adjustbox}\\
 %    \end{macrocode}
 %
-% The middle third is 32\,mm high, so we model it as a fixed-size \env{minipage}.
-% Into this we put the title, author and institute lines. We use stretchy skips
-% to ensure the elements are evenly spaced.
+% In the lower half, we have a sort of shallow inverted triangle into which to
+% cram the title, author and institute lines. We use stretchy skips to space the
+% elements evenly.
 %
 %    \begin{macrocode}
   \begin{minipage}[b][39mm][c]{\textwidth}
@@ -2666,7 +2664,6 @@ The final few sections each document a different separate helper package.
   \end{minipage}
   \vspace*{2mm}
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -2674,10 +2671,10 @@ The final few sections each document a different separate helper package.
 %<*theme|theme2|theme3|theme4>
 % \fi
 %
-% \subsection{Finishing off}
+% \subsubsection{Finale page}
 %
 % We provide a \cs{finale} command for use on the last slide, to parallel
-% \cs{maketitle}. It behaves differently depending on the mode.
+% \cs{maketitle}. Here is the version for presentations.
 %
 % \subsubsection{In the presentation inner theme}
 %
@@ -2686,7 +2683,7 @@ The final few sections each document a different separate helper package.
 % In presentation mode, \cs{finale} is intended to be used in a frame. It prints
 % a thank you and some key information that the audience can note down during
 % the questions. To parallel \cs{maketitle}, it triggers the use of a
-% \pkg{beamer} template.
+% \pkg{beamer} template and the \texttt{titlepage} layout.
 %
 %    \begin{macrocode}
 \mode<presentation>{%
@@ -2705,9 +2702,8 @@ The final few sections each document a different separate helper package.
 %<*theme>
 % \fi
 %
-% Here is the template for the \bthm{RDA} theme. As with the title page template,
-% we switch to title page mode; this time we use the alternative title
-% background. We insert a spacer to represent the top third.
+% Here is the template for the \bthm{RDA} theme. This time we use the
+% alternative title background. We insert a spacer to represent the top third.
 %
 %    \begin{macrocode}
 \setbeamertemplate{finale page}{%
@@ -2769,7 +2765,6 @@ The final few sections each document a different separate helper package.
   \end{minipage}
   \vspace*{15mm}
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -2777,9 +2772,8 @@ The final few sections each document a different separate helper package.
 %<*theme2>
 % \fi
 %
-% Here is the corresponding template for the \bthm{RDA2016} theme. As with the
-% title page template, we switch to title page mode and insert a spacer to
-% protect the logo at the top of the page.
+% Here is the corresponding template for the \bthm{RDA2016} theme. We insert a
+% spacer to protect the logo at the top of the page.
 %
 %    \begin{macrocode}
 \setbeamertemplate{finale page}{%
@@ -2834,7 +2828,6 @@ The final few sections each document a different separate helper package.
   }
   \vspace*{\stretch{1}}%
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -2842,9 +2835,8 @@ The final few sections each document a different separate helper package.
 %<*theme3>
 % \fi
 %
-% Here is the corresponding template for the \bthm{RDA2016} theme. As with the
-% title page template, we switch to title page mode and insert a spacer to
-% protect the logo at the top of the page.
+% Here is the corresponding template for the \bthm{RDA2016} theme. We insert a
+% spacer to protect the logo at the top of the page.
 %
 %    \begin{macrocode}
 \setbeamertemplate{finale page}{%
@@ -2899,7 +2891,6 @@ The final few sections each document a different separate helper package.
   }
   \vspace*{\stretch{1}}%
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -2907,9 +2898,8 @@ The final few sections each document a different separate helper package.
 %<*theme4>
 % \fi
 %
-% Here is the template for the \bthm{RDA} theme. As with the title page template,
-% we switch to title page mode; this time we use the alternative title
-% background. We insert a spacer to represent the top third.
+% Here is the template for the \bthm{RDA2024} theme. We use the dedicated
+% finale page background.
 %
 %    \begin{macrocode}
 \setbeamertemplate{finale page}{%
@@ -2918,10 +2908,10 @@ The final few sections each document a different separate helper package.
   \vbox to 10mm {}\vfill
 %    \end{macrocode}
 %
-% The background image again leaves us with the middle third of the slide
-% (58\,mm) into which to cram some text. Again, we use a fixed-size
-% \env{minipage} for this, and use stretchy skips to ensure the elements are
-% evenly spaced. We start with a thank you.
+% There is about 58\,mm clear vertical space into which to fit the elements.
+% We use a fixed-size \env{minipage} for this, and use stretchy skips
+% to ensure the elements are evenly spaced. We start with a thank you,
+% approximating the design used in the PowerPoint template.
 %
 %    \begin{macrocode}
   \begin{adjustbox}{minipage=[c][58mm]{\textwidth}}%
@@ -2969,7 +2959,6 @@ The final few sections each document a different separate helper package.
     }
   \end{adjustbox}
 }
-
 %    \end{macrocode}
 %
 % \iffalse
@@ -2977,7 +2966,7 @@ The final few sections each document a different separate helper package.
 %<*class>
 % \fi
 %
-% \subsubsection{In the class, in article mode}
+% \subsection{Class: Endmatter}
 %
 % \begin{macro}{finale}
 % In article mode, we will present relevant information laid out in tabular
